Initial work on tags

--- a/src/Cynthia.Card.Unity/src/Cynthia.Unity.Card/Assets/Locales/en.xml
+++ b/src/Cynthia.Card.Unity/src/Cynthia.Unity.Card/Assets/Locales/en.xml
@@ -1655,4 +1655,74 @@
 	<entry id="card_61004_name">Bran Tuirseach</entry>
 	<entry id="card_61004_info">Discard up to 3 cards from your deck and Strengthen them by 1.</entry>
 	<entry id="card_61004_flavor">没人能取代布兰王，但后世定会努力尝试。</entry>
+	<entry id="card_double_agent_tag">Double Agent</entry>
+ 	<entry id="card_wild_hunt_tag">Wild Hunt</entry>
+ 	<entry id="card_tactic_tag">Tactic</entry>
+ 	<entry id="card_beast_tag">Beast</entry>
+ 	<entry id="card_leader_tag">Leader</entry>
+ 	<entry id="card_mage_tag">Mage</entry>
+ 	<entry id="card_boss_tag">Boss</entry>
+ 	<entry id="card_vampire_tag">Vampire</entry>
+ 	<entry id="card_cintra_tag">Cintra</entry>
+ 	<entry id="card_insectoid_tag">Insectoid</entry>
+ 	<entry id="card_stray_tag">Stray</entry>
+ 	<entry id="card_construct_tag">Construct</entry>
+ 	<entry id="card_spell_tag">Spell</entry>
+ 	<entry id="card_redania_tag">Redania</entry>
+ 	<entry id="card_siege_support_tag">Siege Support</entry>
+ 	<entry id="card_clan_drummond_tag">Clan Drummond</entry>
+ 	<entry id="card_specter_tag">Specter</entry>
+ 	<entry id="card_cursed_tag">Cursed</entry>
+ 	<entry id="card_soldier_tag">Soldier</entry>
+ 	<entry id="card_kaedwen_tag">Kaedwen</entry>
+ 	<entry id="card_vodyanoi_tag">Vodyanoi</entry>
+ 	<entry id="card_clan_tuirseach_tag">Clan Tuirseach</entry>
+ 	<entry id="card_clan_tordarroch_tag">Clan Tordarroch</entry>
+ 	<entry id="card_clan_dimun_tag">Clan Dimun</entry>
+ 	<entry id="card_witcher_tag">Witcher</entry>
+ 	<entry id="card_cultist_tag">Cultist</entry>
+ 	<entry id="card_alchemy_tag">Alchemy</entry>
+ 	<entry id="card_reckless_tag">Reckless</entry>
+ 	<entry id="card_clan_heymaey_tag">Clan Heymaey</entry>
+ 	<entry id="card_blitz_tag">Blitz</entry>
+ 	<entry id="card_dryad_tag">Dryad</entry>
+ 	<entry id="card_special_tag">Special</entry>
+ 	<entry id="card_elf_tag">Elf</entry>
+ 	<entry id="card_lyria_tag">Lyria</entry>
+ 	<entry id="card_necrophage_tag">Necrophage</entry>
+ 	<entry id="card_machine_tag">Machine</entry>
+ 	<entry id="card_aedirn_tag">Aedirn</entry>
+ 	<entry id="card_support_tag">Support</entry>
+ 	<entry id="card_clan_an_craite_tag">Clan An Craite</entry>
+ 	<entry id="card_dwarf_tag">Dwarf</entry>
+ 	<entry id="card_draconid_tag">Draconid</entry>
+ 	<entry id="card_siege_engine_tag">Siege Engine</entry>
+ 	<entry id="card_temeria_tag">Temeria</entry>
+ 	<entry id="card_officer_tag">Officer</entry>
+ 	<entry id="card_weather_tag">Weather</entry>
+ 	<entry id="card_organic_tag">Organic</entry>
+ 	<entry id="card_item_tag">Item</entry>
+ 	<entry id="card_hazard_tag">Hazard</entry>
+ 	<entry id="card_boon_tag">Boon</entry>
+ 	<entry id="card_ambush_tag">Ambush</entry>
+ 	<entry id="card_doomed_tag">Doomed</entry>
+ 	<entry id="card_bear_tag">Bear</entry>
+ 	<entry id="card_ogroid_tag">Ogroid</entry>
+ 	<entry id="card_blue_stripes_tag">Blue Stripes</entry>
+ 	<entry id="card_breedable_tag">Breedable</entry>
+ 	<entry id="card_devourer_tag">Devourer</entry>
+ 	<entry id="card_dragon_tag">Dragon</entry>
+ 	<entry id="card_harpy_tag">Harpy</entry>
+ 	<entry id="card_medic_tag">Medic</entry>
+ 	<entry id="card_stubborn_tag">Stubborn</entry>
+ 	<entry id="card_permadeath_tag">Permadeath</entry>
+ 	<entry id="card_peasant_tag">Peasant</entry>
+ 	<entry id="card_potion_tag">Potion</entry>
+ 	<entry id="card_relict_tag">Relict</entry>
+ 	<entry id="card_regressing_tag">Regressing</entry>
+ 	<entry id="card_shapeshifter_tag">Shapeshifter</entry>
+ 	<entry id="card_token_tag">Token</entry>
+ 	<entry id="card_agent_tag">Agent</entry>
+ 	<entry id="card_clan_brokvar_tag">Clan Brokvar</entry>
+ 	<entry id="card_test_tag">Test</entry>
 </entries>
