--- a/src/Cynthia.Card.Unity/src/Cynthia.Unity.Card/Assets/Resources/Locales/zh.xml
+++ b/src/Cynthia.Card.Unity/src/Cynthia.Unity.Card/Assets/Resources/Locales/zh.xml
@@ -1,11 +1,116 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <entries>
-	<entry id="login_login_button">LOGIN</entry>
-	<entry id="login_register_button">REGISTER</entry>
-	<entry id="login_login_placeholder">Login</entry>
-	<entry id="login_password_placeholder">Password</entry>
-	<entry id="login_remember_toggle">Remember credentials</entry>
-	
+	<entry id="login_login_button">登录</entry>
+	<entry id="login_register_button">注册</entry>
+	<entry id="login_login_placeholder">请输入您的用户名</entry>
+	<entry id="login_password_placeholder">请输入您的密码d</entry>
+	<entry id="login_remember_toggle">记住用户名和密码</entry>
+	<entry id="game_title">巫师之昆特牌怀旧复刻版</entry>
+	<entry id="news_title">公告 Notes</entry>
+	<entry id="login_title">登录</entry>
+	<entry id="news_placeholder">获取公告中。。请等待。。。</entry>
+	<entry id="login_project_info">本项目永久开源免费,欢迎加群945408322进行交流和关注本项目</entry>
+	<entry id="your_version">目前版本为:</entry>
+	<entry id="last_version">最新版本为:</entry>
+	<entry id="exit_button">退出</entry>
+	<entry id="register_title">注册</entry>
+	<entry id="register_back_button">登录</entry>
+	<entry id="register_register_button">注册</entry>
+	<entry id="register_login_placeholder">请输入您的用户名</entry>
+	<entry id="register_username_placeholder">请输入您的游戏名称</entry>
+	<entry id="register_password_placeholder">请输入您的密码</entry>
+	<entry id="register_password_confirm_placeholder">请再次输入您的密码</entry>
+	<entry id="latest_version_info">最新版本为: {0}.</entry>
+	<entry id="latest_version_error">未获取到最新版本号</entry>
+  <entry id="language_title">语言:</entry>
+  <entry id="language_text">中文</entry>
+	<entry id="news_error">暂未获取到公告。</entry>
+	<entry id="error_title">发生了一个错误</entry>
+	<entry id="error_no_decks">当前没有卡组,请添加卡组后再进行匹配</entry>
+	<entry id="looking_for_opponent">寻找对手中</entry>
+	<entry id="cancel_button">取消</entry>
+	<entry id="deck_ready">牌组就绪</entry>
+	<entry id="play_button">比赛</entry>
+	<entry id="error_incomplete_deck">该卡组无法用于该匹配,请重新编辑或切换卡组。</entry>
+	<entry id="yes_button">是</entry>
+	<entry id="no_button">否</entry>
+	<entry id="select_deck">选择牌组</entry>
+	<entry id="logged_out">账号被登陆,被挤下了线</entry>
+	<entry id="logged_out_title">账号被其他人强制登陆</entry>
+	<entry id="disconnected_title">断开连接</entry>
+	<entry id="disconnected">请尝试重新登陆\n注意! 在目前版本中,如果处于对局或匹配时断线,需要重新启动客户端,否则下次游戏开始时会异常卡死。</entry>
+	<entry id="ok_button">好</entry>
+	<entry id="quit_title">退出</entry>
+	<entry id="quit_confirm">是否退出游戏</entry>
+	<entry id="exit_title">退出游戏?</entry>
+	<entry id="exit_confirm">是否退出游戏</entry>
+	<entry id="delete_title">是否要删除卡组</entry>
+	<entry id="delete_deck_confirm">是否删除 '{0}' 卡组</entry>
+	<entry id="error_deleting_deck">无法删除卡组 {0}.</entry>
+	<entry id="limit_title">卡组数量已经达到40</entry>
+	<entry id="deck_limit">无法添加更多卡组,请删除或者编辑现有卡组</entry>
+	<entry id="error_adding_deck">因为不明原因,无法添加卡组,是否返回初始界面</entry>
+	<entry id="default_deckname">默认名称</entry>
+	<entry id="current_version_info">目前版本为: {0}</entry>
+	<entry id="logging_in">正在登录...请稍等片刻</entry>
+	<entry id="wrong_credentials">验证失败,用户名或密码有误,如果反复失败请尝试重启客户端或联系作者确认服务器是否开启</entry>
+	<entry id="login_welcome">登录成功,欢迎回来~{0}</entry>
+	<entry id="register_empty_input">输入不能为空..请重新输入</entry>
+	<entry id="passwords_not_identical">两次密码输入不一致,请重新输入</entry>
+	<entry id="registering">正在注册...请稍等片刻</entry>
+	<entry id="error_already_registered">注册失败,该用户名或该游戏名已经存在,尝试更换后重新注册</entry>
+	<entry id="registration_successful">注册成功~点击登陆切换到登录页面进行登陆~</entry>
+	<entry id="error_registration">发生异常,原因或许是服务器未开启,尝试重试或者联系作者</entry>
+	<entry id="main_menu_title">主菜单</entry>
+	<entry id="casual_match_text">休闲模式</entry>
+	<entry id="casual_match_info">轻松友好的牌局</entry>
+	<entry id="deck_builder_text">卡组编辑器</entry>
+	<entry id="deck_builder_info">创建或调整牌组</entry>
+	<entry id="main_menu_message">本昆特牌为昆特牌爱好者复刻,仅用于学习,欢迎加群945408322进行交流和关注本项目。</entry>
+	<entry id="enabled">启用</entry>
+	<entry id="disabled">禁用</entry>
+	<entry id="graphics_low">低</entry>
+	<entry id="graphics_medium">中</entry>
+	<entry id="graphics_high">高</entry>
+	<entry id="options_title">选项</entry>
+	<entry id="graphics_button">图形</entry>
+	<entry id="audio_button">音频</entry>
+	<entry id="graphics_title">图形设置</entry>
+	<entry id="audio_title">音频设置</entry>
+	<entry id="resolution_text">屏幕分辨率</entry>
+	<entry id="fullscreen_text">全屏n</entry>
+	<entry id="image_quality_text">图像质量</entry>
+	<entry id="back_button">返回</entry>
+	<entry id="mute_text">全部静音</entry>
+	<entry id="music_volume_text">音乐音量</entry>
+	<entry id="sound_volume_text">声效音量</entry>
+	<entry id="cards_text">卡牌:</entry>
+	<entry id="switch_deck_button">切换牌组</entry>
+	<entry id="matchmaking_placeholder">使用匹配密码进行匹配</entry>
+	<entry id="close_button">返回</entry>
+	<entry id="deckbuilder_title">牌组编辑器</entry>
+	<entry id="new_deck_button">新建牌组</entry>
+	<entry id="show_button">显示卡牌</entry>
+	<entry id="graveyard_info">我方墓地</entry>
+	<entry id="round_win_text">己方回合!</entry>
+	<entry id="round_lost_text">本局战败!</entry>
+	<entry id="starting_second_round">第 2 局开始!</entry>
+	<entry id="victory_text">胜利</entry>
+	<entry id="score_title">得分</entry>
+	<entry id="finish_redrawing_button">手牌调度完毕</entry>
+	<entry id="confirm_button">确认</entry>
+	<entry id="hide_button">隐藏卡牌</entry>
+	<entry id="passed_text">放弃跟牌</entry>
+	<entry id="opponent_replacing_cards">敌方正在调度手牌</entry>
+	<entry id="defeat_text">失败</entry>
+	<entry id="draw_text">平局</entry>
+  	<entry id="my_graveyard_text">我方墓地</entry>
+	<entry id="opponents_graveyard_text">敌方墓地</entry>
+	<entry id="my_deck_text">我方卡组(原始状态,顺序)</entry>
+	<entry id="redraw_info">"选择1张卡重抽。[{0}/{1}]</entry>
+  	<entry id="search_placeholder">搜索</entry>
+  	<entry id="graveyard_text">墓地</entry>
+
 	<entry id="card_12004_name">利维亚的杰洛特</entry>
 	<entry id="card_12004_info">没有特殊技能。</entry>
 	<entry id="card_12004_flavor">如果要付出这种代价方能拯救世界，那就让世界毁灭算了。</entry>
@@ -1558,4 +1663,75 @@
 	<entry id="card_61004_name">布兰王</entry>
 	<entry id="card_61004_info">从牌组丢弃最多3张牌，其中的单位牌获得1点强化。</entry>
 	<entry id="card_61004_flavor">没人能取代布兰王，但后世定会努力尝试。</entry>
+
+	<entry id="card_double_agent_tag">双面间谍</entry>
+ 	<entry id="card_wild_hunt_tag">狂猎</entry>
+ 	<entry id="card_tactic_tag">谋略</entry>
+ 	<entry id="card_beast_tag">野兽</entry>
+ 	<entry id="card_leader_tag">领袖牌</entry>
+ 	<entry id="card_mage_tag">法师</entry>
+ 	<entry id="card_boss_tag">首领</entry>
+ 	<entry id="card_vampire_tag">吸血鬼</entry>
+ 	<entry id="card_cintra_tag">辛特拉</entry>
+ 	<entry id="card_insectoid_tag">类虫生物</entry>
+ 	<entry id="card_stray_tag">流亡军</entry>
+ 	<entry id="card_construct_tag">构造体</entry>
+ 	<entry id="card_spell_tag">法术</entry>
+ 	<entry id="card_redania_tag">瑞达尼亚</entry>
+ 	<entry id="card_siege_support_tag">攻城支援</entry>
+ 	<entry id="card_clan_drummond_tag">德拉蒙家族</entry>
+ 	<entry id="card_specter_tag">鬼灵</entry>
+ 	<entry id="card_cursed_tag">诅咒生物</entry>
+ 	<entry id="card_soldier_tag">士兵</entry>
+ 	<entry id="card_kaedwen_tag">科德温</entry>
+ 	<entry id="card_vodyanoi_tag">水生</entry>
+ 	<entry id="card_clan_tuirseach_tag">图尔赛克家族</entry>
+ 	<entry id="card_clan_tordarroch_tag">托达洛克家族</entry>
+ 	<entry id="card_clan_dimun_tag">迪门家族</entry>
+ 	<entry id="card_witcher_tag">猎魔人</entry>
+ 	<entry id="card_cultist_tag">呓语</entry>
+ 	<entry id="card_alchemy_tag">炼金</entry>
+ 	<entry id="card_reckless_tag">鲁莽</entry>
+ 	<entry id="card_clan_heymaey_tag">海玫家族</entry>
+ 	<entry id="card_blitz_tag">闪击</entry>
+ 	<entry id="card_dryad_tag">树精</entry>
+ 	<entry id="card_special_tag">特殊</entry>
+ 	<entry id="card_elf_tag">精灵</entry>
+ 	<entry id="card_lyria_tag">莱里亚</entry>
+ 	<entry id="card_necrophage_tag">食腐生物</entry>
+ 	<entry id="card_machine_tag">机械</entry>
+ 	<entry id="card_aedirn_tag">亚甸</entry>
+ 	<entry id="card_support_tag">辅助</entry>
+ 	<entry id="card_clan_an_craite_tag">奎特家族</entry>
+ 	<entry id="card_dwarf_tag">矮人</entry>
+ 	<entry id="card_draconid_tag">龙兽</entry>
+ 	<entry id="card_siege_engine_tag">攻城器械</entry>
+ 	<entry id="card_temeria_tag">泰莫利亚</entry>
+ 	<entry id="card_officer_tag">军官</entry>
+ 	<entry id="card_weather_tag">天气</entry>
+ 	<entry id="card_organic_tag">有机</entry>
+ 	<entry id="card_item_tag">道具</entry>
+ 	<entry id="card_hazard_tag">灾厄</entry>
+ 	<entry id="card_boon_tag">恩泽</entry>
+ 	<entry id="card_ambush_tag">伏击</entry>
+ 	<entry id="card_doomed_tag">佚亡</entry>
+ 	<entry id="card_bear_tag">巨熊</entry>
+ 	<entry id="card_ogroid_tag">食人魔</entry>
+ 	<entry id="card_blue_stripes_tag">蓝衣铁卫</entry>
+ 	<entry id="card_breedable_tag">繁育</entry>
+ 	<entry id="card_devourer_tag">吞食者</entry>
+ 	<entry id="card_dragon_tag">巨龙</entry>
+ 	<entry id="card_harpy_tag">鹰身女妖</entry>
+ 	<entry id="card_medic_tag">医生</entry>
+ 	<entry id="card_stubborn_tag">坚守</entry>
+ 	<entry id="card_permadeath_tag">永逝</entry>
+ 	<entry id="card_peasant_tag">农民</entry>
+ 	<entry id="card_potion_tag">药水</entry>
+ 	<entry id="card_relict_tag">残物</entry>
+ 	<entry id="card_regressing_tag">回溯</entry>
+ 	<entry id="card_shapeshifter_tag">变身</entry>
+ 	<entry id="card_token_tag">退场</entry>
+ 	<entry id="card_agent_tag">密探</entry>
+ 	<entry id="card_clan_brokvar_tag">布洛克瓦尔家族</entry>
+ 	<entry id="card_test_tag">测试</entry>
 </entries>
